@@ -72,6 +72,24 @@
                     </select>
                 </td>
             </tr>
+		<TR>
+			<TD>
+				<IMG SRC="img/home.gif" ALT="{trans("Location:")}">
+			</TD>
+			<TD class="bold">
+				{trans("Location:")}
+			</TD>
+			<TD>
+				<INPUT TYPE="TEXT" SIZE="40" VALUE="{$voipaccountdata.location}" id="location" NAME="voipaccountdata[location]"  {tip text="Enter location (optional)" trigger="location"}>
+				<A href="javascript: void(0);" onclick="if (check_teryt()) return locationchoosewin('voipaccountdata', 'voipaccountadd', document.forms['voipaccountadd'].elements['voipaccountdata[location_city]'].value,  document.forms['voipaccountadd'].elements['voipaccountdata[location_street]'].value)" {tip text="Click to select location"}>&raquo;&raquo;&raquo;</A>
+				<BR>
+				<INPUT type="hidden" name="voipaccountdata[location_city]" value="{$voipaccountdata.location_city}">
+				<INPUT type="hidden" name="voipaccountdata[location_street]" value="{$voipaccountdata.location_street}">
+				<INPUT type="hidden" name="voipaccountdata[location_house]" value="{$voipaccountdata.location_house}">
+				<INPUT type="hidden" name="voipaccountdata[location_flat]" value="{$voipaccountdata.location_flat}">
+				<INPUT TYPE="checkbox" name="voipaccountdata[teryt]" id="teryt" onchange="check_teryt('location')"{if $voipaccountdata.teryt} checked{/if}><label for="teryt">{trans("TERRIT-DB")}</label>
+			</TD>
+		</TR>
             <tr>
                 <td class="text-right" colspan="3">
                     <a href="javascript:document.voipaccountadd.submit();" accesskey="s">
@@ -90,6 +108,8 @@
 </form>
 <SCRIPT type="text/javascript">
 <!--
-    document.forms['voipaccountadd'].elements['voipaccountdata[login]'].focus();
+	document.forms['voipaccountadd'].elements['voipaccountdata[login]'].focus();
+
+	check_teryt('location', true);
 //-->
 </SCRIPT>
