@@ -74,6 +74,24 @@
                     </select>
                 </td>
             </tr>
+		<TR>
+			<TD>
+				<IMG SRC="img/home.gif" ALT="{trans("Location:")}">
+			</TD>
+			<TD class="bold">
+				{trans("Location:")}
+			</TD>
+			<TD>
+				<INPUT TYPE="TEXT" SIZE="40" VALUE="{$voipaccountinfo.location}" id="location" NAME="voipaccountedit[location]"  {tip text="Enter location (optional)" trigger="location"}>
+				<A href="javascript: void(0);" onclick="if (check_teryt()) return locationchoosewin('voipaccountedit', 'editvoipaccount', document.forms['editvoipaccount'].elements['voipaccountedit[location_city]'].value,  document.forms['editvoipaccount'].elements['voipaccountedit[location_street]'].value)" {tip text="Click to select location"}>&raquo;&raquo;&raquo;</A>
+				<BR>
+				<INPUT type="hidden" name="voipaccountedit[location_city]" value="{$voipaccountinfo.location_city}">
+				<INPUT type="hidden" name="voipaccountedit[location_street]" value="{$voipaccountinfo.location_street}">
+				<INPUT type="hidden" name="voipaccountedit[location_house]" value="{$voipaccountinfo.location_house}">
+				<INPUT type="hidden" name="voipaccountedit[location_flat]" value="{$voipaccountinfo.location_flat}">
+				<INPUT TYPE="checkbox" name="voipaccountedit[teryt]" id="teryt" onchange="check_teryt('location')"{if $voipaccountinfo.teryt} checked{/if}><label for="teryt">{trans("TERRIT-DB")}</label>
+			</TD>
+		</TR>
             <tr>
                 <td>
                     <img src="img/users.gif" alt="">
@@ -100,6 +118,8 @@
 </form>
 <script type="text/javascript">
 <!--
-    document.forms['editvoipaccount'].elements['voipaccountedit[login]'].focus();
+	document.forms['editvoipaccount'].elements['voipaccountedit[login]'].focus();
+
+	check_teryt('location', true);
 //-->
 </script>
