@@ -10,6 +10,7 @@ version ?.??.?? (????-??-??):
   - move upgrade db schema code to LMSDB class - it can also be used by plugins [chilan]
   - added simple plugin management form [chilan]
   - added support for old style plugin management [chilan]
+  - added location to voip accounts as we're preparing for plicbd2 localisation service [chilan]
 
 version 1.11.17 (2015-06-29):
 
